<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">CPUMiner</string>
	<string name="action_settings">Settings</string>
	<string name="pref_server_screen_key">server_screen_key</string>
	<string name="pref_server_title">Server Preferences</string>
	<string name="pref_server">Server</string>
	<string name="pref_server_key">server_key</string>
	<string name="pref_port">Port</string>
	<string name="pref_port_key">port_key</string>
	<string name="pref_protocol">Network Protocol</string>
	<string name="pref_protocol_key">protocol_key</string>
	<string name="pref_username">Username</string>
	<string name="pref_username_key">username_key</string>
	<string name="pref_password">Password</string>
	<string name="pref_password_key">password_key</string>
	<string name="pref_algorithm">Algorithm</string>
	<string name="pref_algorithm_key">algorithm_key</string>
	<string name="pref_device_screen_key">device_screen_key</string>
	<string name="pref_device_title">Device Preferences</string>
	<string name="pref_device_title_key">device_title_key</string>
	<string name="pref_battery">Run on Battery</string>
	<string name="pref_battery_key">battery_key</string>
	<string name="pref_battery_level">Minimum Battery Level</string>
	<string name="pref_battery_level_key">battery_level_key</string>
	<string name="pref_widget">widget_enabled</string>
	<string name="button_start">Start Mining</string>
	<string name="button_stop">Stop Mining</string>
	<string name="button_clear">Clear Log</string>

</resources>
