<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="pref_screen"
	android:title="@string/pref_title" >

		<EditTextPreference
			android:key="pref_server"
			android:title="@string/pref_server" />

		<EditTextPreference
			android:key="pref_port"
			android:title="@string/pref_port"
			android:inputType="number" />

		<ListPreference
			android:key="pref_protocol"
			android:title="@string/pref_protocol"
			android:entries="@array/pref_protocol_entries"
			android:entryValues="@array/pref_protocol_values"
			android:defaultValue="stratum+tcp://" />

		<EditTextPreference
			android:key="pref_username"
			android:title="@string/pref_username" />

		<EditTextPreference
			android:key="pref_password"
			android:title="@string/pref_password" />

		<ListPreference
			android:key="pref_algorithm"
			android:title="@string/pref_algorithm"
			android:entries="@array/pref_algorithm_entries"
			android:entryValues="@array/pref_algorithm_values"
			android:defaultValue="scrypt" />

</PreferenceScreen>