<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:id="@+id/textlog"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:weightSum="1.0">

        <Button android:id="@+id/start_button"
            android:text="@string/button_start"
            style="@style/ButtomRowButton"/>
        <Button android:id="@+id/stop_button"
            android:text="@string/button_stop"
            style="@style/ButtomRowButton"/>
        <Button android:id="@+id/clear_button"
            android:text="@string/button_clear"
            style="@style/ButtomRowButton"/>
    </LinearLayout>
</LinearLayout>
